# Atlas

./: .atlas-bin  .gitignore  38_operator_overloading.atl  Cargo.toml  README.md  ROADMAP.md  atlas  fix_rust_compiler.patch  gdb_script.txt  output.ll  output.txt  test_array_push  test_array_push.atl  test_fs  test_fs.atl  test_infer  test_infer.atl  test_io.atl  test_main  test_main.atl  test_no_imports.atl  test_out.txt  test_parse.atl  test_runner.sh  test_runner_no_exit.sh  test_runner_v2.sh  tmp_bootstrap_probe  tmp_hashmap_decl.atl  tmp_hashmap_get.atl  tmp_hashmap_set.atl  tmp_repro
compiler/: Cargo.toml  output.txt  test_output.txt
compiler/src/: error.rs  legacy_backend.rs  lexer.rs  lib.rs  llvm_codegen.rs  main.rs  monomorphizer.rs  parser.rs  resolver.rs  typechecker.rs
compiler/src/llvm_codegen/: native.rs  support.rs
compiler/src/parser/: ast.rs  lower.rs  parse.rs
compiler/src/typechecker/: helpers.rs  native.rs  types.rs
compiler/tests/: integration_tests.rs  lexer_snapshot.rs  parser_snapshot.rs
compiler/tests/integration/: 01_arithmetic  01_arithmetic.atl  01_arithmetic.ll  01_arithmetic.tmp.ll  02_control_flow  02_control_flow.atl  02_control_flow.tmp.ll  03_putchar  03_putchar.atl  03_putchar.tmp.ll  04_relational  04_relational.atl  04_relational.tmp.ll  05_relational_float  05_relational_float.atl  05_relational_float.tmp.ll  06_if_else_chain  06_if_else_chain.atl  06_if_else_chain.tmp.ll  07_while_nested  07_while_nested.atl  07_while_nested.tmp.ll  08_functions  08_functions.atl  08_functions.tmp.ll  09_shadowing  09_shadowing.atl  (+144 more)
(+179 files in other folders)
