[workspace]
members  = ["compiler"]
resolver = "2"

[workspace.dependencies]
logos    = "0.14"
insta    = { version = "1.39", features = ["ron"] }
clap     = { version = "4.5", features = ["derive"] }
miette   = { version = "7.2", features = ["fancy"] }
thiserror = "1.0"
serde    = { version = "1.0", features = ["derive"] }
# Pinned to LLVM 18 — not linked until Stage 2
llvm-sys = "180"
